--- a/css/index.css
+++ b/css/index.css
@@ -255,6 +255,7 @@ header .container {
     animation: float 1s infinite alternate;
     animation-timing-function: cubic-bezier(0, 0.15, 1, 0.9);
     transform: translatey(1px);
+    z-index: 4;
   }
 }
 @keyframes float {
@@ -590,7 +591,7 @@ header .container {
       & p {
         color: #777;
         line-height: 2;
-
+        padding-bottom: 10px;
         margin-bottom: 0;
       }
       & i {
