--- a/css/index.css
+++ b/css/index.css
@@ -102,6 +102,7 @@ header .container {
     display: flex;
     align-items: center;
     margin: 0;
+    padding: 10px;
 
     & > li {
       transition: 0.3s;
