--- a/css/index.css
+++ b/css/index.css
@@ -632,6 +632,7 @@ header .container {
         width: 0%;
         right: 0;
         top: 0;
+        border-radius: 10px;
         z-index: 1;
         transition: 0.3s;
       }
@@ -683,7 +684,113 @@ header .container {
     }
   }
 }
-/* end tea, */
+/* end team */
+/* start services */
+.services {
+  padding: 100px 0;
+  background-color: var(--sectioncolor);
+  position: relative;
+  &::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 29px;
+    left: 0;
+    top: 0px;
+    background-image: linear-gradient(135deg, white 25%, transparent 25%),
+      linear-gradient(225deg, white 25%, transparent 25%);
+    background-size: 30px 30px;
+  }
+  .container {
+    padding: 60px 10px;
+    display: grid;
+    margin: 0 auto;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    gap: 40px;
+    .ser {
+      background-color: white;
+      display: flex;
+      flex-flow: column;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      transition: 0.3s;
+      box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+      counter-increment: counter;
+
+      &::after {
+        position: absolute;
+        content: "";
+        top: -3px;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 0;
+        height: 3px;
+        transition: 0.3s;
+        background-color: var(--maincolor);
+      }
+      &:hover::after {
+        width: 100%;
+      }
+      &:hover {
+        transform: translateY(-10px);
+      }
+
+      .icon {
+        text-align: center;
+        padding: 15px;
+        & h3 {
+          color: var(--maincolor);
+          font-size: 30px;
+          font-weight: bold;
+        }
+      }
+      & i {
+        color: var(--sectioncolor);
+        font-size: 80px;
+      }
+      .text {
+        display: flex;
+        justify-content: space-between;
+        align-self: stretch;
+        align-items: center;
+        background-color: #f9f9f9;
+        height: 50px;
+        .num {
+          background-color: var(--maincolor);
+          align-self: stretch;
+          width: 100px;
+          position: relative;
+
+          &::after {
+            position: absolute;
+            content: "0" counter(counter);
+            top: 50%;
+            left: 42%;
+            transform: translate(-50%, -50%);
+            color: white;
+            font-size: 30px;
+            font-weight: bold;
+          }
+          &::before {
+            position: absolute;
+            content: "";
+            background-color: #d5d5d5;
+            height: 100%;
+            width: 60%;
+            right: -45px;
+            top: 0;
+            transform: skewX(-30deg);
+          }
+        }
+        & a {
+          color: var(--maincolor);
+          padding: 0 10px;
+        }
+      }
+    }
+  }
+}
 @media (max-width: 768px) {
   header > .container {
     flex-flow: column;
