--- a/css/index.css
+++ b/css/index.css
@@ -1485,13 +1485,14 @@ footer {
         }
         &:last-of-type {
           & p {
-            margin-bottom: 0;
+            margin: 0;
           }
         }
       }
       & i {
         font-size: 35px;
         color: var(--maincolor);
+        width: 40px;
       }
     }
     .grid {
