--- a/css/index.css
+++ b/css/index.css
@@ -137,7 +137,7 @@ header .container {
 }
 .toggle:hover .drop-down {
   opacity: 1;
-  top: calc(100% + 1px);
+  top: calc(100% + 4px);
   z-index: 100;
 }
 .logo a {
@@ -1498,7 +1498,7 @@ footer {
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-      gap: 15px;
+      gap: 10px 4px;
       align-items: center;
       justify-content: center;
 
@@ -1608,6 +1608,13 @@ footer {
   }
   footer main {
     text-align: center;
+    .contact > div {
+      gap: 2px;
+      flex-flow: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+    }
   }
 }
 
