--- a/css/index.css
+++ b/css/index.css
@@ -690,6 +690,7 @@ header .container {
     }
   }
 }
+
 /* end team */
 /* start services */
 .services {
@@ -1243,7 +1244,7 @@ header .container {
 /* start stats */
 .stats {
   padding: 60px 0;
-  background-image: url("/imgs/stats.jpg");
+  background-image: url("../imgs/stats.jpg");
   background-size: cover;
   position: relative;
   &::before {
